--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "https://yourblogurl.com/path/to/icon-192.png",
+      "src": "/VWSCODES/blob/main/192vwscodes.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://yourblogurl.com/path/to/icon-512.png",
+      "src": "/VWSCODES/blob/main/512vwscodes.png",
       "sizes": "512x512",
       "type": "image/png"
     }
