--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,27 @@
 {
   "name": "VWS-CODES",
   "short_name": "VWS-CODES",
-  "start_url": "/",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "theme_color": "black",
+  "scope": ".",
+  "description": "",
   "icons": [
     {
-      "src": "/VWSCODES/blob/main/192vwscodes.png",
+      "src": "/ZipGlide/ZG-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/VWSCODES/blob/main/512vwscodes.png",
+      "src": "/ZipGlide/ZG-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
+  ,
+  "serviceworker": {
+    "src": "serviceworker.js",
+    "scope": "/"
+}
 }
